Welcome message on/off option

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a> [ID: ...]</span>
+        <br />&bull; <span id="optionWELCOMEMESSAGE"></span>
         <br /><br /><br /><strong><center>Information</center></strong>
         &bull; <a href="https://benandy.typeform.com/to/zlElxa" target="_blank">Contact the developer</a>
         <br />&bull; New Tab page copyright &copy; Benjamin, 2015 - All rights reserved.
