--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
         <strong><center>Options<br /></center></strong>
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
-        <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a> [ID: ...]</span>
+        <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
         <br /><br /><br /><strong><center>Information</center></strong>
         &bull; <a href="https://benandy.typeform.com/to/zlElxa" target="_blank">Contact the developer</a>
         <br />&bull; New Tab page copyright &copy; Benjamin, 2016 - All rights reserved.
         <br />&bull; <a id="shortcutList">Keyboard shortcut list</a>
         <br />&bull; Background images last updated on <span id="ImageUpdateDate">...</span>
-        <br />&bull; Background image URL: <span id="ImageURL">...</span>
         <br />&bull; Images provided by <a href="http://unsplash.com" target="_blank">unsplash.com</a> (<a href="https://unsplash.com/license" target="_blank">License</a>)
       </div>
     </div>
     <div id="link">
       <center>
+        <br /><br />
         <a id="link1" class="linked"><img alt="Google" title="Google" src="content/link/google.png" width="30" height="30" /></a>
         <a id="link2" class="linked"><img alt="Twitter" title="Twitter" src="content/link/twitter.png" width="30" href="30" /></a>
         <a id="link3" class="linked"><img alt="Facebook" title="Facebook" src="content/link/fbLogo.png" width="30" height="30" /></a>
