--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
+    <link href="http://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" title="x" />
+    <link href="content/favicon.png" rel="icon" type="image/png" />
     <meta name="author" content="Benjamin" />
     <meta charset="utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:600' rel='stylesheet' type='text/css' />
-    <link href="content/favicon.png" rel="icon" type="image/png" />
-    <link href="style.css" rel="stylesheet" type="text/css" title="x" />
     <title>New Tab</title>
   </head>
   <body id="body">
@@ -36,6 +36,7 @@
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
+        <br />&bull; <span id="optionNAME"><a></a></span>
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
