--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
-        <!-- <br />&bull; <span id="optionPMAM"><a></a></span> -->
+        <br />&bull; <span id="optionPMAM"><a></a></span>
         <br />&bull; <span id="optionNAME"><a></a></span>
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
