Working on set background feature

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
-        <br />&bull; <span id="optionPMAM"><a></a></span>
-        <br />&bull; <span id="optionNAME"><a></a></span>
+        <!-- <br />&bull; <span id="optionSETBACK"></span> -->
+        <br />&bull; <span id="optionPMAM"></span>
+        <br />&bull; <span id="optionNAME">></span>
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
