Date formatting feature

--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@
         <br />&bull;"&#8595;" Dim the page.
         <br />&bull;"G" Grayscale the background.
       </div>
+      <div id="dateFormatMenu">
+        <span><img src="content/x.png" id="dateFormatX" /></span>
+        <strong><center>Date Formatting Options</center></strong>
+        <br />&bull; <a id="dateFormatting0">Monday, February 1<sup>st</sup></a>
+        <br />&bull; <a id="dateFormatting1">February 1<sup>st</sup></a>
+        <br />&bull; <a id="dateFormatting2">Monday, 1<sup>st</sup> February</a>
+        <br />&bull; <a id="dateFormatting3">Monday the 1<sup>st</sup> of February</a>
+        <br />&bull; <a id="dateFormatting4">Monday</a>
+      </div>
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
         <!-- <br />&bull; <span id="optionSETBACK"></span> -->
+        <br />&bull; <span id="optionDATEFORMAT"><a>Change the date format</a></span>
         <br />&bull; <span id="optionPMAM"></span>
-        <br />&bull; <span id="optionNAME">></span>
+        <br />&bull; <span id="optionNAME"></span>
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
