New date format

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <br />&bull; <a id="dateFormatting2">Monday, 1<sup>st</sup> February</a>
         <br />&bull; <a id="dateFormatting3">Monday the 1<sup>st</sup> of February</a>
         <br />&bull; <a id="dateFormatting4">Monday</a>
+        <br />&bull; <a id="dateFormatting5">Monday, 1 February</a>
       </div>
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
