Hide/Show quotes features

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
-        <!-- <br />&bull; <span id="optionSETBACK"></span> -->
+        <br />&bull; <span id="optionQUOTE"></span>
         <br />&bull; <span id="optionDATEFORMAT"><a>Change the date format</a></span>
         <br />&bull; <span id="optionPMAM"></span>
         <br />&bull; <span id="optionNAME"></span>
