--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
+        <br />&bull; <span id="optionRESET"><a>RESET ALL SETTINGS</a></span>
         <br /><br /><br /><strong><center>Information</center></strong>
         &bull; <a href="https://benandy.typeform.com/to/zlElxa" target="_blank">Contact the developer</a>
         <br />&bull; New Tab page copyright &copy; Benjamin, 2016 - All rights reserved.
