Icon visibility options

--- a/index.html
+++ b/index.html
@@ -43,9 +43,17 @@
         <br />&bull; <a id="dateFormatting4">Monday</a>
         <br />&bull; <a id="dateFormatting5">Monday, 1 February</a>
       </div>
+      <div id="iconVisibilitySettings">
+        <span><img src="content/x.png" id="iconVisibilityX" /></span>
+        <strong><center>Icon Settings</center></strong>
+        <br />&bull; <a id="iconVisi0">Show icons in grayscale</a>
+        <br />&bull; <a id="iconVisi1">Show icons in colour</a>
+        <br />&bull; <a id="iconVisi2">Hide icons</a>
+      </div>
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
+        <br />&bull; <span id="optionICONS"><a>Icon Settings</a></span>
         <br />&bull; <span id="optionQUOTE"></span>
         <br />&bull; <span id="optionDATEFORMAT"><a>Change the date format</a></span>
         <br />&bull; <span id="optionPMAM"></span>
