--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="http://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" title="x" />
-    <link href="content/favicon.png" rel="icon" type="image/png" />
+    <link href="content/favicon128x128.png" rel="icon" type="image/png" />
     <meta name="author" content="Benjamin" />
     <meta charset="utf-8" />
     <title>New Tab</title>
