Background image information

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         <br />&bull; <a id="iconVisi1">Show icons in colour</a>
         <br />&bull; <a id="iconVisi2">Hide icons</a>
       </div>
+      <div id="imageInformationMenu">
+        <span><img src="content/x.png" id="imageInformationX" /><span>
+        <strong><center>Image Information</center></strong>
+        <br />&bull; URL: <span id="imgUrlBOX"></span>
+        <br />&bull; Author: <span id="imgAuthBOX"></span>
+        <br />&bull; Author's Unsplash Profile: <span id="imgAuthProBOX"></span>
+      </div>
       <div id="optionsMenu">
         <span><img src="content/x.png" id="optionsX" /></span>
         <strong><center>Options<br /></center></strong>
@@ -61,6 +68,7 @@
         <br />&bull; <span id="timerButton"><span id="optionTIMER"><a>Start a timer</a></span></span>
         <br />&bull; <span id="optionRELOAD"><a>Reload the page</a></span>
         <br />&bull; <span id="optionNEWBACK"><a>Change the background image</a></span>
+        <br />&bull; <span id="optionIMAGEDATA"><a>View background image information</a></span>
         <br />&bull; <span id="optionRESET"><a>RESET ALL SETTINGS</a></span>
         <br /><br /><br /><strong><center>Information</center></strong>
         &bull; <a href="https://benandy.typeform.com/to/zlElxa" target="_blank">Contact the developer</a>
