Added new Cookie Policy URL

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <br />&bull;<a><span id="infoBackgroundImage">View background image information</span></a>
       <br /><br />
       <div class="optionsMenuFoot">
-        <a href="http://benandy.github.io/skye/cookiepolicy">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://benandy.typeform.com/to/zlElxa">Contact</a> - <a href="https://unsplash.com/license">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log">Change Log</a>
+        <a href="http://benandy.github.io/cookie">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://benandy.typeform.com/to/zlElxa">Contact</a> - <a href="https://unsplash.com/license">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log">Change Log</a>
         <br />
         Skye New Tab copyright <a href="http://benandy.github.io">Benjamin Developments</a> &copy; 2015 - All rights reserved
       </div>
@@ -97,7 +97,7 @@
       <div class="opTtl">Cookies Updated</div>
       <br /><span id="ckiUpdMsg"></span>
       <div class="optionsMenuFoot">
-        <a href="http://benandy.github.io/skye/cookiepolicy">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log">Change Log</a>
+        <a href="http://benandy.github.io/cookie">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/change.log">Change Log</a>
       </div>
     </div>
     <script src="assets/skye.js"></script>
