Added background grayscale feature

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <br />&bull;<a><span id="opIcnVsblty">Icon link display options</span></a>
       <br />&bull;<a><span id="opWlcmMsgs"></span></a>
       <br />&bull;<a><span id="opTwntyFrHrTm"></span></a>
+      <br />&bull;<a><span id="opGryscl">Toggle background grayscale</span></a>
       <div class="opTtl">Information</div>
       <br />&bull;Background images provided by <a href="https://unsplash.com">Unsplash.com</a>
       <br />&bull;Background images last updated on <span id="infoImgUpdt"></span>
@@ -87,6 +88,7 @@
       <br />"O" &bull; Open the options menu
       <br />"ESC" &bull; Close any open menus
       <br />"N" &bull; Change the background image
+      <br />"G" &bull; Toggle background grayscale
     </div>
     <form method="get" action="https://www.google.com/search" id="gSearchF">
       <img src="assets/images/link/google.png" alt="Google Search" class="gSearchImg" />
