--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <center>
         <a id="link1" class="link"><img src="assets/images/link/google.png" alt="Google" title="Google" width="2%" /></a>
         <a id="link2" class="link"><img src="assets/images/link/fb.png" alt="Facebook" title="Facebook" width="2%" /></a>
-        <a id="link3" class="link"><img src="assets/images/link/insta.png" alt="Instagram" title="Instragram" width="2%" /></a>
+        <a id="link3" class="link"><img src="assets/images/link/insta.png" alt="Instagram" title="Instagram" width="2%" /></a>
         <a id="link4" class="link"><img src="assets/images/link/pin.png" alt="Pinterest" title="Pinterest" width="2%" /></a>
         <a id="link5" class="link"><img src="assets/images/link/twtr.png" alt="Twitter" title="Twitter" width="2%" /></a>
         <a id="link6" class="link"><img src="assets/images/link/utube.png" alt="YouTube" title="YouTube" width="2%" /></a>
