--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <br />&bull;<a><span id="srchBxChcs2"></span></a>
       <br />&bull;<a><span id="srchBxChcs3"></span></a>
       <br />&bull;<a><span id="srchBxChcs4"></span></a>
+      <br />&bull;<a><span id="srchBxChcs5"></span></a>
     </div>
     <div id="srchBx"></div>
     <div class="optionsMenu" id="ckiUpd">
