--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <link href="http://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" type="text/css" />
     <link href="assets/images/favicon128x128.png" rel="icon" type="image/png" />
     <link href="assets/master.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
       Images provided by <a href="https://unsplash.com">Unsplash.com</a>
     </p>
     <div class="pageTitle" id="title">
-      <a href="http://benandy.github.io/skye">Skye New Tab</a>
+      <a href="https://benandy.github.io/skye">Skye New Tab</a>
     </div>
     <div class="mainClock" id="clockBox"></div>
     <div class="mainDate" id="dateBox"></div>
@@ -50,9 +50,9 @@
       <br />&bull;<a><span id="infoBackgroundImage">View background image information</span></a>
       <br /><br />
       <div class="optionsMenuFoot">
-        <a href="http://benandy.github.io/cookie">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://benandy.typeform.com/to/zlElxa">Contact</a> - <a href="https://unsplash.com/license">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="http://benandy.github.io/terms">Terms and Conditions</a>
+        <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://benandy.typeform.com/to/zlElxa">Contact</a> - <a href="https://unsplash.com/license">Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
         <br />
-        Skye New Tab copyright <a href="http://benandy.github.io">Benjamin Developments</a> &copy; 2015 - All rights reserved
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2015 - All rights reserved
       </div>
     </div>
     <div class="optionsMenu" id="dteFom">
@@ -106,7 +106,7 @@
       <div class="opTtl">Cookies Updated</div>
       <br /><span id="ckiUpdMsg"></span>
       <div class="optionsMenuFoot">
-        <a href="http://benandy.github.io/cookie">Cookie Policy</a> - <a href="http://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="http://benandy.github.io/terms">Terms and Conditions</a>
+        <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
       </div>
     </div>
     <script src="assets/skye.js"></script>
