--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" type="text/css" />
+    <link href="assets/fontData/titilliumWeb.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/favicon128x128.png" rel="icon" type="image/png" />
     <link href="assets/master.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,15 +12,14 @@
   <body id="body">
     <header id="header"></header>
     <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
-    <p class="unsplashCred" id="unsplash">
-      Images provided by <a href="https://unsplash.com">Unsplash.com</a>
-    </p>
+    <p class="unsplashCred" id="unsplash"></p>
     <div class="pageTitle" id="title">
       <a href="https://benandy.github.io/skye">Skye New Tab</a>
     </div>
     <div class="mainClock" id="clockBox"></div>
     <div class="mainDate" id="dateBox"></div>
     <div class="mainAlert" id="alertBox"></div>
+    <!-- LINKS -->
     <div class="links" id="linkDiv">
       <center>
         <a id="link1" class="link"><img src="assets/images/link/google.png" alt="Google" title="Google" width="2%" /></a>
@@ -109,6 +108,7 @@
         <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
       </div>
     </div>
+    <!-- SCRIPTS -->
     <script src="assets/skye.js"></script>
     <script src="assets/background.js"></script>
     <script src="assets/links.js"></script>
