--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
     <script src="assets/background.js"></script>
     <script src="assets/links.js"></script>
     <script src="assets/searchBox.js"></script>
+    <script src="assets/calls.js"></script>
+    <script type="text/javascript">
+      main = true;
+    </script>
   </body>
 </html>
