--- a/popup.html
+++ b/popup.html
@@ -108,11 +108,15 @@
         <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
       </div>
     </div>
+    <br /><br /><br /><br />
     <!-- SCRIPTS -->
     <script src="assets/skye.js"></script>
-    <script src="assets/popup.js"></script>
     <script src="assets/background.js"></script>
     <script src="assets/links.js"></script>
     <script src="assets/searchBox.js"></script>
+    <script src="assets/calls.js"></script>
+    <script type="text/javascript">
+      popup = true;
+    </script>
   </body>
 </html>
