--- a/popup.html
+++ b/popup.html
@@ -11,25 +11,12 @@
   </head>
   <body id="body">
     <header id="header"></header>
-    <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
-    <p class="unsplashCred" id="unsplash"></p>
     <div class="pageTitle" id="title">
-      <a href="https://benandy.github.io/skye">Skye New Tab</a>
+      Skye New Tab
     </div>
     <div class="mainClock" id="clockBox"></div>
     <div class="mainDate" id="dateBox"></div>
     <div class="mainAlert" id="alertBox"></div>
-    <!-- LINKS -->
-    <div class="links" id="linkDiv">
-      <center>
-        <a id="link1" class="link"><img src="assets/images/link/google.png" alt="Google" title="Google" width="2%" /></a>
-        <a id="link2" class="link"><img src="assets/images/link/fb.png" alt="Facebook" title="Facebook" width="2%" /></a>
-        <a id="link3" class="link"><img src="assets/images/link/insta.png" alt="Instagram" title="Instagram" width="2%" /></a>
-        <a id="link4" class="link"><img src="assets/images/link/pin.png" alt="Pinterest" title="Pinterest" width="2%" /></a>
-        <a id="link5" class="link"><img src="assets/images/link/twtr.png" alt="Twitter" title="Twitter" width="2%" /></a>
-        <a id="link6" class="link"><img src="assets/images/link/utube.png" alt="YouTube" title="YouTube" width="2%" /></a>
-      </center>
-    </div>
     <div class="optionsMenu" id="opM">
       <img src="assets/images/x.png" alt="Close" class="x" id="opMclose" />
       <div class="opTtl">Options</div>
@@ -108,15 +95,15 @@
         <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
       </div>
     </div>
-    <br /><br /><br /><br />
+    <br /><br /><br />
     <!-- SCRIPTS -->
-    <script src="assets/skye.js"></script>
-    <script src="assets/background.js"></script>
-    <script src="assets/links.js"></script>
-    <script src="assets/searchBox.js"></script>
     <script src="assets/calls.js"></script>
     <script type="text/javascript">
       popup = true;
     </script>
+    <script src="assets/skye.js"></script>
+    <script src="assets/background.js"></script>
+    <script src="assets/links.js"></script>
+    <script src="assets/searchBox.js"></script>
   </body>
 </html>
