--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body id="body">
     <header id="header"></header>
     <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
+    <div class="textStyle" id="dText"></div>
     <div class="adTextStyle" id="adText"></div>
     <div class="pageTitle" id="title">
       <a href="https://benandy.github.io/skye">Skye New Tab</a>
