--- a/index.html
+++ b/index.html
@@ -118,5 +118,6 @@
     <script src="assets/background.js"></script>
     <script src="assets/links.js"></script>
     <script src="assets/searchBox.js"></script>
+    <script src="assets/advertisement.js"></script>
   </body>
 </html>
