--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <br />&bull;Image Author: <span id="bkgrndImgInf1"></span>
       <br />&bull;Author's Unsplash Account: <span id="bkgrndImgInf2"></span>
       <br />&bull;Image URL: <span id="bkgrndImgInf3"></span>
+      <!-- <br />&bull;Author's web address: <span id="bkgrndImgInf4"></span> -->
       <br /><br />
       <div class="optionsMenuFoot">
         Background images provided by <a href="https://unsplash.com">Unsplash.com</a>
