--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="assets/images/favicon128x128.png" rel="icon" type="image/png" />
     <link href="assets/master.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Benjamin" />
+    <meta name="author" content="Benjamin Developments" />
     <meta charset="utf-8" />
     <title>New Tab</title>
   </head>
@@ -72,7 +72,7 @@
       <br />&bull;Author's web address: <span id="bkgrndImgInf4"></span>
       <br /><br />
       <div class="optionsMenuFoot">
-        Background images provided by <a href="https://unsplash.com">Unsplash.com</a>
+        Background images provided by <a href="https://unsplash.com" target="_blank">Unsplash.com</a>
       </div>
     </div>
     <div class="optionsMenu" id="icnVsblty">
