--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <link href="assets/images/favicon128x128.png" rel="icon" type="image/png" />
     <link href="assets/master.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Benjamin" />
+    <meta name="author" content="Benjamin Developments" />
     <meta charset="utf-8" />
     <title>New Tab</title>
   </head>
