--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Benjamin Developments" />
     <meta charset="utf-8" />
-    <title>New Tab</title>
+    <title>Skye Popup</title>
   </head>
   <body id="body">
     <header id="header"></header>
