--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
       <br />&bull;<a><span id="infoBackgroundImage">View background image information</span></a>
       <br /><br />
       <div class="optionsMenuFoot">
-        <span id="footerTop1"></span>
-        <span id="footerBottom1"></span>
+        <span><a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Background Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log" target="_blank">Change Log</a> - <a href="https://benandy.github.io/terms" target="_blank">Terms and Conditions</a></span>
+        <br />
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2016 - All rights reserved
       </div>
     </div>
     <div class="optionsMenu" id="dteFom">
@@ -115,9 +116,11 @@
       <div class="opTtl">Cookies Updated</div>
       <br /><span id="ckiUpdMsg"></span>
       <div class="optionsMenuFoot">
-        <a href="https://benandy.github.io/cookie">Cookie Policy</a> - <a href="https://benandy.github.io/privacy">Privacy Policy</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log">Change Log</a> - <a href="https://benandy.github.io/terms">Terms and Conditions</a>
+        <br />
+        <span><a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Background Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log" target="_blank">Change Log</a> - <a href="https://benandy.github.io/terms" target="_blank">Terms and Conditions</a></span>
+        <br />
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2016 - All rights reserved
       </div>
-    </div>
     <!-- SCRIPTS -->
     <script src="assets/calls.js"></script>
     <script type="text/javascript">
@@ -127,10 +130,5 @@
     <script src="assets/background.js"></script>
     <script src="assets/links.js"></script>
     <script src="assets/searchBox.js"></script>
-    <script src="assets/footer.js"></script>
-    <script type="text/javascript">
-      createFooter(true, true, 1);
-      createFooter(true, false, 2);
-    </script>
   </body>
 </html>
