--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
     <div class="textStyle" id="dText"></div>
     <div class="pageTitle" id="title">
-      <a href="https://benandy.github.io/skye">Skye New Tab</a>
+      Fresh New Tab Page for Google Chrome
     </div>
     <div class="mainClock" id="clockBox"></div>
     <div class="mainDate" id="dateBox"></div>
