--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
     <header id="header"></header>
     <br /><br />
     <div class="pageTitle" id="title">
-      Skye New Tab
+      Fresh New Tab Page for Google Chrome
     </div>
     <br /><br /><br />
     <div class="mainClock" id="clockBox"></div>
