--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body id="body">
     <header id="header"></header>
     <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
-    <div class="textStyle" id="dText"></div>
+    <div class="textStyle" id="dText">&nbsp;</div>
     <div class="pageTitle" id="title">
       Fresh New Tab Page for Google Chrome
     </div>
