--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body id="body">
     <header id="header"></header>
     <img src="assets/images/options.png" alt="Options Cog" class="optionsCog" title="Options &amp; Information" id="options" />
-    <div class="textStyle" id="dText">&nbsp;</div>
+    <div class="textStyle" id="dText">Background images provided by <a href="https://unsplash.com/">Unsplash.com</a></div>
     <div class="pageTitle" id="title">
       Fresh New Tab Page for Google Chrome
     </div>
@@ -32,7 +32,6 @@
       <img src="assets/images/x.png" alt="Close" class="x" id="opMclose" />
       <div class="opTtl">Options</div>
       <br />&bull;<a><span id="opAMPM"></span></a>
-      <br />&bull;<a><span id="opChBkImg">Change the background image</span></a>
       <br />&bull;<a><span id="opChngNme">Change or remove your name</span></a>
       <br />&bull;<a><span id="opChngeDteFrmt">Change the date formatting</span></a>
       <br />&bull;<a><span id="opSrchBx">Search box options</span></a>
