--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="optionsMenuFoot">
         <span><a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Background Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log" target="_blank">Change Log</a> - <a href="https://benandy.github.io/terms" target="_blank">Terms and Conditions</a></span>
         <br />
-        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2016-2017 - All rights reserved
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2017 - All rights reserved
       </div>
     </div>
     <div class="optionsMenu" id="dteFom">
@@ -117,7 +117,7 @@
         <br />
         <span><a href="https://benandy.github.io/cookie" target="_blank">Cookie Policy</a> - <a href="https://benandy.github.io/privacy" target="_blank">Privacy Policy</a> - <a href="mailto:benjaminandyy@gmail.com">Contact</a> - <a href="https://unsplash.com/license" target="_blank">Background Image License</a> - <a href="https://github.com/BenAndy/SkyeNewTab/blob/master/assets/change.log" target="_blank">Change Log</a> - <a href="https://benandy.github.io/terms" target="_blank">Terms and Conditions</a></span>
         <br />
-        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2016-2017 - All rights reserved
+        Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2017 - All rights reserved
       </div>
     <!-- SCRIPTS -->
     <script src="assets/calls.js"></script>
