--- a/extensionindex.html
+++ b/extensionindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <link href="assets/fontData/titilliumWeb.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:600" rel="stylesheet" />
     <link href="assets/master.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Benjamin Developments" />
@@ -118,14 +118,6 @@
         <br />
         Skye New Tab copyright <a href="https://benandy.github.io">Benjamin Developments</a> &copy; 2017 - All rights reserved
       </div>
-    <!-- SCRIPTS -->
-    <script src="assets/calls.js"></script>
-    <script type="text/javascript">
-      main = true;
-    </script>
     <script src="assets/skye.js"></script>
-    <script src="assets/background.js"></script>
-    <script src="assets/links.js"></script>
-    <script src="assets/searchBox.js"></script>
   </body>
 </html>
