--- a/newtab.html
+++ b/newtab.html
@@ -5,6 +5,7 @@
     <link href="a/m.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   </head>
   <body id="a">
     <header id="b"></header>
