--- a/newtab.html
+++ b/newtab.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <script src="a/jquery.min.js" type="text/javascript"></script>
+    <title>New Tab</title>
   </head>
   <body id="a">
     <header id="b"></header>
